--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,10 +11,19 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Test Methods
-        run: |
-          make test_with_env
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16
+
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./...
+      
   lint:
     runs-on: ubuntu-latest
     steps:
